# torch-object-detection

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  config.yaml  fasterrcnn.py  loader.py  open_images_dataset.py  parser_open_images.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py  transforms.py  validate.py
.github/workflows/: lint.yml  testing.yml
dataset/: dataset_factory.py  loader.py  open_images_dataset.py  parser_open_images.py  transforms.py
parser/: parser_open_images.py
tests/: test_anns.py  test_dataset.py  test_transforms.py
utils/: coco_eval.py  coco_evaluate.py  coco_utils.py  load_config.py  torch_utils.py
